# stars-decompile

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ai.c  ai.h  ai2.c  ai2.h  ai3.c  ai3.h  ai4.c  ai4.h  aiu.c  aiu.h  aiutil.c  aiutil.h  battle.c  battle.h  build.c  build.h  cli.c  cli.h  create.c  create.h  debuglog.c  debuglog.h  dump.c  dump.h  enums.h  file.c  file.h  globals.c  globals.h  init.c  init.h  io.c  io.h  log.c  (+69 more)
decompiled/: OrderInfoDlg.c  OrderInfoDlg_cleaned.c  file.c  framewndproc_clean.c  generate_turn.c  max_defenses.c  max_defenses.h  max_defenses_cleaned.c  max_defenses_cleaned.h  punishment.c  punishment.h  punishment_calltree.c  punishment_cleaned.c  punishment_cleaned.h  punishment_raw.c  race_advantage_cleaned.c  score.c  score_cleaned.c  serial_encoding.c  serial_encoding.h  victory_conditions.c  victory_conditions.h  winmain_clean.c  winmain_decompiled.c
decompiled/all/: ai.c  ai2.c  ai3.c  ai4.c  aiu.c  battle.c  build.c  create.c  init.c  io.c  main.c  mdi.c  memory.c  mine.c  msg.c  parts.c  planet.c  popup.c  produce.c  race.c  report.c  research.c  scan.c  ship.c  ship2.c  strings.c  tb.c  text.c  thing.c  turn.c  turn2.c  tutor.c  tutor2.c  util.c  utilgen.c  vcr.c
notes/: InitMdiApp.md  README.md  data-structures.md  decompilation-priorities.md  ghidra-workflow.md  implementation-plan.md  implementation.md  prompts.md  todo.md  translation-instructions.md  win16-exports.md
res/: stars.rc
res/accelerators/: main.rc  title.rc
res/cursors/: closegrab.cur  invalid.cur  opengrab.cur  pointerhand.cur  scanner.cur  scanneradd.cur  tooltipquestion.cur  trash.cur  veriticalsplit.cur
res/dialogs/: DLG102.RC  DLG1026.RC  DLG1068.RC  DLG115.RC  DLG127.RC  DLG128.RC  DLG140.RC  DLG141.RC  DLG146.RC  DLG147.RC  DLG148.RC  DLG149.RC  DLG150.RC  DLG151.RC  DLG160.RC  DLG2008.RC  DLG2013.RC  DLG2019.RC  DLG2025.RC  DLG2502.RC  DLG2504.RC  DLG390.RC  DLG391.RC  DLG392.RC  DLG393.RC  DLG4202.RC  DLG82.RC  DLG86.RC  DLG89.RC  DLG90.RC  DLG91.RC  DLG92.RC  DLG93.RC  DLG97.RC  about.rc  browser.rc  hostmode.rc  password.rc  saveturn.rc  saveturnsingleplayer.rc  (+3 more)
res/menu/: menu.rc
res/tutorial/: 10001-tutorail.hst  10003-tutorail.m1  10005-tutorail.m2
scripts/: build_implementation_plan.py  call_graph.json  call_graph.py  dump_nb09_c.py  dump_nb09_ghidra.py  dump_nb09_structmeta.py  extract_globals_initializers.py  generate_struct_asserts.py  implementation_status.json  make_project_index.py  nb09_ghidra_globals.json  nb09_model.py  nb09_parser.py  nb09_structmeta.json  parse_nb09_cli.py  print_nb09_proc_locals.py  run_wine_gdb.sh  seg_overrides.json  segments.csv  sig_overrides.json  struct_overrides.json  track_implementation.py  update_project_index.sh  zip-src.sh
scripts/ghidra_scripts/: ApplyNb09FuncLocalsFromJson.py  ApplyNb09FuncSigsFromJson.py  ApplyNb09GlobalsFromJson.py  ApplyNb09NamesFromJson.py  ApplyNb09StructPackingFromJson.py  ApplyNb09StructsFromJson.py  ApplyNb09TypesFromJson.py  ApplyRaceAttributeEquates.java  BuildCallGraph.py  CreateEnumsFromHeader.py  DecompileFunction.py  DeleteDefaultDatSymbols.py  DumpAsm.py  DumpPcode.py  ExportAllDecompiled.py  ExportCallTree.py  ExportDecompiled.py  ImportWindowsH.py  ListFunctions.py  RetypeDAT.py  RetypeUndefined8Doubles1120.py  UpdateStarsRuntimeHelperSignatures.py  UpdateWin16WindowsApiSignatures.py  enums.h  extract_globals_initializers.py  ghidra_utils.py
scripts/ghidra_scripts/includes/: enums.h
test/: acutest.h  test_battle.c  test_create.c  test_file.c  test_log.c  test_memory.c  test_msg.c  test_parts.c  test_planet.c  test_produce.c  test_race.c  test_save.c  test_ship.c  test_ship2.c  test_thing.c  test_turn.c  test_util.c  test_utilgen.c
test/data/: game.def  humanoid.r1
test/data/test/2400/: TEST.M1  TEST.PLA
test/data/test/2401/: TEST.H1  TEST.HST  TEST.M1  TEST.XY
test/data/tiny/: TINY.HST  TINY.M1  TINY.M2  TINY.XY
test/data/tiny/2400/: TEST.H1  TEST.HST  TEST.X1
test/data/tutorial/: TUTORIAL.HST  TUTORIAL.M1  TUTORIAL.M2  TUTORIAL.XY
toolchains/: mingw-w64.cmake
